--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
     "require-dev": {
         "phpunit/phpunit": "4.1.*"
         ,"athletic/athletic": "2.x"
+        ,"phpspec/prophecy": "1.x"
     },
     "config": {
         "bin-dir": "bin"
