--- a/composer.json
+++ b/composer.json
@@ -36,9 +36,10 @@
     },
     "require": {
         "php": ">=5.5.0",
-        "doctrine/common": "~2.2",
-        "symfony/finder": "~2.3",
-        "symfony/class-loader": "~2.3",
+        "doctrine/common": "2.x",
+        "doctrine/annotations": "1.x",
+        "symfony/finder": "2.x",
+        "symfony/class-loader": "2.x",
         "guzzle/guzzle": "*"
     },
     "require-dev": {
