--- a/composer.json
+++ b/composer.json
@@ -43,13 +43,15 @@
         "php": ">=5.5.0",
         "doctrine/common": "2.x",
         "doctrine/annotations": "1.x",
-        "symfony/finder": "2.x",
-        "symfony/class-loader": "2.x"
+        "symfony/finder": "2.x"
+
     },
     "require-dev": {
         "phpunit/phpunit": "4.x"
         ,"athletic/athletic": "2.x"
         ,"phpspec/prophecy": "dev-master"
+        ,"guzzle/guzzle": "*"
+        ,"symfony/class-loader": "2.x"
     },
     "config": {
         "bin-dir": "bin"
