--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -48,7 +48,8 @@
         <const name="TEST_ODB_PORT" value="2480"/>
         <const name="TEST_ODB_USER" value="admin"/>
         <const name="TEST_ODB_PASSWORD" value="admin"/>
-        <const name="TEST_ODB_DATABASE" value="GratefulDeadConcerts"/>
+        <const name="TEST_ODB_DATABASE_NEW" value="odm_test"/>
+        <const name="TEST_ODB_DATABASE" value="ODMTest"/>
         <const name="TEST_ODB_TIMEOUT" value="30"/>
     </php>
 </phpunit>
