--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,9 @@ php:
   - 5.5
 before_script:
   - ./bin/initialize-dependencies.sh
-  - ./bin/initialize-ci.sh 1.7.7
+  - ./bin/initialize-ci.sh 2.0.7
   - php ./test/Integration/fixtures/load.php
 script: bin/phpunit --group __nogroup__,integration
 notifications:
   email:
-    - alessandro.nadalin@gmail.com
-    - ing.davidino@gmail.com
-    - suppakilla@gmail.com
-    - weinmaster@gmail.com
+    - stuart.carnie@gmail.com
