Moving towards binary binding

--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
         "php": ">=5.5.0",
         "doctrine/common": "2.x",
         "doctrine/annotations": "1.x",
-        "symfony/finder": "2.x"
+        "symfony/finder": "2.x",
+        "ostico/PhpOrient": "dev-master"
 
     },
     "require-dev": {
