--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -44,7 +44,8 @@
 
     <php>
         <const name="TEST_ODB_HOST" value="127.0.0.1"/>
-        <const name="TEST_ODB_PORT" value="2480"/>
+        <const name="TEST_ODB_PORT" value="2424"/>
+        <const name="TEST_ODB_HTTP_PORT" value="2480"/>
         <const name="TEST_ODB_USER" value="admin"/>
         <const name="TEST_ODB_PASSWORD" value="admin"/>
         <const name="TEST_ODB_DATABASE_NEW" value="odm_test"/>
